# hydrophone-labeling-verification-app

./: .gitignore  OCEANS3_JSON_SCHEMA.md  README.md  UNIFIED_LABELING_TOOL_SPEC.md  pyproject.toml  pytest.ini  requirements.txt  run.py
app/: cli.py  config.py  defaults.py  main.py
app/assets/: audio_controls.js  bbox_clientside.js  bbox_hover_affordances.js  display_range_slider_tooltips.js  modal_lifecycle_clientside.js  specgen_overlay_preflight.js  spectrogram_image_loading.js  styles.css  verification_clientside.js
app/callbacks/: __init__.py  data_config_callbacks.py  folder_browser_callbacks.py  main_callbacks.py  pagination_callbacks.py  register.py
app/components/: audio_player.py  folder_browser.py  hierarchical_selector.py  modal.py  note_editor.py  (+1 more)
assets/: audio_controls.js  styles.css  styles.css_temp
config/: bounding_box_tags.yaml  default.yaml  mock.yaml
docs/: APP_USAGE_GUIDE.md  integration_guide.md  predictions_json_format.md
scripts/: download_test_data.py  generate_mock_data.py  regenerate_spectrograms.py  run_live_tests.py
shared/: unified_prediction_tracker.py
taxonomy/: hierarchical_labels.py
tests/: conftest.py  specgen_overlay.spec.js  test_app_smoke.py  test_audio_playback.py  test_bbox_tags.py  test_data_loading.py  test_format_converters.py  test_image_processing.py  test_live_http.py  test_modal_bbox_helpers.py  test_modal_label_delete.py  test_note_state.py  test_persistence.py  test_profile_callbacks.py  test_spectrogram_display_controls.py  test_tab_context.py  test_verify_filter_tree.py  test_verify_rejected_labels.py
(+88 files in other folders)
