[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hydrophone-verification-app"
version = "1.0.0"
description = "Interactive verification app for hydrophone acoustic analysis"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
hydrophone-verify = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "shared*", "taxonomy*"]

[tool.setuptools.package-data]
app = ["assets/*", "assets/**/*"]
